--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
 Uploaders: Jelmer Vernooij <jelmer@debian.org>
 Homepage: https://github.com/jplana/python-etcd
-Build-Depends: python-all-dev (>= 2.6.6-3), python-all-dbg (>= 2.6.6-3), python3-all-dev, python3-all-dbg, debhelper (>= 9), python-unittest2, dh-python, python-setuptools, python3-setuptools
+Build-Depends: python-all (>= 2.6.6-3), python-all-dbg (>= 2.6.6-3), python3-all, python3-all-dbg, debhelper (>= 9), python-unittest2, dh-python, python-setuptools, python3-setuptools
 Standards-Version: 3.9.6
 X-Python-Version: >= 2.7
 X-Python3-Version: >= 3.3
