--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,8 @@ Build-Depends: python-all (>= 2.6.6-3), python-all-dbg (>= 2.6.6-3), python3-all
 Standards-Version: 3.9.6
 X-Python-Version: >= 2.7
 X-Python3-Version: >= 3.3
-Vcs-Git: git://anonscm.debian.org/python-modules/packages/python-etcd.git -b unstable
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=python-modules/packages/python-etcd.git
+Vcs-Git: https://anonscm.debian.org/git/python-modules/packages/python-etcd.git -b unstable
+Vcs-Browser: https://anonscm.debian.org/cgit/python-modules/packages/python-etcd.git
 
 Package: python-etcd
 Architecture: all
