--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: python-etcd
 Section: python
 Priority: optional
 Maintainer: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
-Uploaders: Jelmer Vernooij <jelmer@debian.org>
+Uploaders: Jelmer Vernooĳ <jelmer@debian.org>
 Homepage: https://github.com/jplana/python-etcd
 Build-Depends: python-all (>= 2.6.6-3), python-all-dbg (>= 2.6.6-3), python3-all, python3-all-dbg, debhelper (>= 9), python-unittest2, dh-python, python-setuptools, python3-setuptools
 Standards-Version: 3.9.6
